# cartola-simulator

./: README.md
server/: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
server/TeamAssignment/: arima.py  base_solver.py  genprof.py  instance.py  ls_solver.py  main.py  simulation.py  visualization.py
server/TeamAssignment/utils/: timeseries.py  visualization.py
server/app/: main.py
server/app/TeamAssignment/: arima.py  genprof.py  instance.py  ls_solver.py  lstm.py  main.py  simulation.py  tuner.py
server/app/TeamAssignment/utils/: dir.py  visualization.py
server/app/models/: common.py  model.py  player.py
server/app/routers/: api.py
server/app/static/arima/: 2020-1:1:1.json  2020-2:0:3.json  2020-autoarima.json
server/app/static/gru/: 2020-128:32:8.json  2020-2layers.json  2020-64:8.json  2020-teste.json  2020.json
server/app/static/gru/hp/: 2020-2layers.json  2020.json
server/app/static/lstm/: 2020-15:128:64.json  2020-5.json  2020-7:128:64.json  2020-tuner.json
server/app/static/lstm/hp/: 2020.json  teste.json  teste2.json
server/app/static/mlp/: 2020-1.json  2020.json
server/app/static/otm/: 2020-1:1:1.json  2020-2:0:3.json  2020-autoarima.json  2020-best.json  2020-g2:64:8.json  2020-gru.json  2020-l5.json  2020-l5:15:128:64.json  2020-l7:128:64.json  2020-mlp-1.json  2020-mlp-2.json  2020-mlp.json  melhor-1000.json  teste.json
server/app/static/players/: 2020.json
server/app/static/teams/: 2020.json  allTeams.json
server/app/utils/: constants.py  dir.py  market.py  players.py  timeseries.py  visualization.py
(+109 files in other folders)
